Fix MAGIC unique section: enlarge poster so experts graphic is fully visible

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -422,13 +422,13 @@ body {
 @media (min-width: 1024px) {
   .magic-unique-poster {
     width: 1024px;
-    height: 1672px;
+    height: 1830px;
     max-width: none;
   }
 
   .magic-unique-poster-inner {
     width: 800px;
-    height: 1306px;
+    height: 1430px;
     scale: 1.28;
   }
 }
@@ -436,7 +436,7 @@ body {
 @media (min-width: 1280px) {
   .magic-unique-poster {
     width: 1280px;
-    height: 2090px;
+    height: 2288px;
   }
 
   .magic-unique-poster-inner {
@@ -454,7 +454,7 @@ body {
 @media (min-width: 1536px) {
   .magic-unique-poster {
     width: 1440px;
-    height: 2350px;
+    height: 2574px;
   }
 
   .magic-unique-poster-inner {
